--- a/WebContent/jsp/part/head.jspf
+++ b/WebContent/jsp/part/head.jspf
@@ -1,10 +1,84 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
 	pageEncoding="UTF-8"%>
-	<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
 <title>${pageTitle }</title>
+<link href="${pageContext.request.contextPath}/css/app.css"
+	rel="stylesheet" type="text/css">
+<!-- 폰트어썸 불러오기 -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+
+<!-- 제이쿼리 불러오기 -->
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+	<div class="pc-top-bar pc-ver">
+		<div class="height-100p con flex">
+			<a class="flex flex-ai-c logo height-100p"
+				href="/jspCommunity/usr/home/main">LOGO</a>
+			<div class="menu-box">
+				<ul class="flex height-100p">
+					<li><a class="flex flex-ai-c flex-jc-c height-100p" href="">게시판</a>
+						<ul>
+							<li><a class="flex flex-ai-c flex-jc-c height-100p" href="/jspCommunity/usr/article/list?boardId=1">공지사항
+									게시판</a></li>
+							<li><a class="flex flex-ai-c flex-jc-c height-100p" href="/jspCommunity/usr/article/list?boardId=2">자유
+									게시판</a></li>
+
+						</ul></li>
+					<li><a class="flex flex-ai-c height-100p" href="">방명록</a></li>
+				</ul>
+			</div>
+			<div class="flex flex-ai-c height-100p usermenu">
+				<c:if test="${sessionScope.loginedMemberId > 0 }">
+					<a href="../member/logout">로그아웃</a>
+				</c:if>
+				<c:if test="${sessionScope.loginedMemberId == null }">
+					<a href="../member/login">로그인</a>
+					<a href="../member/join">회원가입</a>
+				</c:if>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="mobile-top-bar mobile-ver">
+		<a href="#" class="side-menu flex flex-ai-c"><i
+			class="fas fa-bars"></i></a> <a href="/jspCommunity/usr/home/main"
+			class="logo">LOGO</a>
+	</div>
+
+
+	<div class="mobile-side-bar mobile-ver">
+		<a href="/jspCommunity/usr/home/main" class="logo">LOGO</a> <a
+			href="#" class="side-bar-close"><i class="fas fa-times"></i></a>
+		<div class="menu-box">
+			<ul>
+				<li><a class="flex flex-ai-c flex-jc-c height-100p" href="">게시판</a>
+					<ul>
+						<li><a class="flex flex-ai-c flex-jc-c height-100p" href="/jspCommunity/usr/article/list?boardId=1">공지사항
+								게시판</a></li>
+						<li><a class="flex flex-ai-c flex-jc-c height-100p" href="/jspCommunity/usr/article/list?boardId=2">자유
+								게시판</a></li>
+					</ul></li>
+				<li><a class="flex flex-ai-c flex-jc-c height-100p" href="#">방명록</a></li>
+			</ul>
+		</div>
+	</div>
+
+	<div class="bottom-bar flex flex-ai-c">
+		<div class="back">
+			<i class="fas fa-arrow-left"></i>
+		</div>
+		<div class="home">
+			<a href="/jspCommunity/usr/home/main"><i class="fas fa-home"></i></a>
+		</div>
+		<div class="forward">
+			<i class="fas fa-arrow-right"></i>
+		</div>
+	</div>
