--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -94,9 +94,10 @@ justify-content:center;
 /* PC버전 탑 바 시작 */
 .pc-top-bar{
 height:100px;
-background-color:#b7b5fd;
+background-color:#4d4b66;
 position:relative;
 z-index:3;
+color:white;
 }
 .pc-top-bar > div{
   max-width:1400px;
@@ -114,47 +115,36 @@ transform:scale(1.3);
 }
 .pc-top-bar  .menu-box {
 font-family: 'Recipekorea';
-color:rgb(70, 70, 70);
 z-index:3;
 }
 
 .pc-top-bar  .menu-box > ul > li {
-
-padding:0 45px;
+position:relative;
 transition:transform .3s;
+width:100px;
+margin:0 20px;
 }
-.pc-top-bar .menu-box > ul > li:nth-child(1):hover{
-background-color:#b7b5fd;
-transform:scale(1.2);
-font-family: 'Recipekorea';
-color:black;
-}
-.pc-top-bar .menu-box > ul > li:nth-child(2):hover{
-transform:scale(1.2);
-font-family: 'Recipekorea';
-color:black;
-}
-.pc-top-bar .menu-box > ul > li:hover > ul{
 
-display:block;
+.pc-top-bar .menu-box > ul > li:hover > ul{
+  height:100%;
 }
 .pc-top-bar .menu-box > ul > li > ul {
+  background-color:#4d4b66;
 position:absolute;
 top:100%;
-left:50%;
-width:100%;  
-color:rgb(70, 70, 70);
+left:50%; 
+height:0;
+width:150px;
+color:white;
 transform:translatex(-50%);
-display:none;
-background-color:#b7b5fd;
+transition:height .5s;
+overflow:hidden;
 }
 
 .pc-top-bar .menu-box > ul > li > ul > li {
 padding:15px 10px;
 }
-.pc-top-bar .menu-box > ul > li > ul > li:hover {
-color:black;
-}
+
 .pc-top-bar  .usermenu{
     font-family: 'Recipekorea';
     position:relative;
@@ -168,6 +158,9 @@ color:black;
 @media ( max-width:799px ) {
 .pc-ver {
 display:none !important;
+}
+body{
+  margin-bottom:100px;
 }
 }
 @media ( min-width:799px ) {
@@ -186,7 +179,8 @@ display:none !important;
 .mobile-top-bar{
 width:100%;
 height:100px;
-background-color:#b7b5fd;
+background-color:#4d4b66;
+color:white;
 position:relative;
 }
 .mobile-top-bar > .logo {
@@ -215,13 +209,38 @@ top:0;
 left:-50%;
 height:100%;
 width:50%;
-background-color:#b7b5fd;
-border-right:2px solid black;  
+background-color:#4d4b66;
+border-right:2px solid white;  
 box-sizing:border-box;
 transition:transform .5s;
-z-index:2;
+color:white;
+z-index:5;
 }
-
+.mobile-side-bar_top {
+  position:relative;
+}
+.mobile-side-bar > .mobile-side-bar_top > .logo{
+  position:absolute;
+  top:15px;
+  left:50%;
+  transform:translatex(-50%);
+   font-size:2.5rem;
+  font-family: 'SDSamliphopangche_Outline';  
+}
+.mobile-side-bar > .mobile-side-bar_top > .side-bar-close {
+  position:absolute;
+  top:10px;
+  right:15px;
+  font-size:2rem;
+  
+}
+.mobile-side-bar_top > .usermenu {
+  position:absolute;
+  top:10px;
+  left:15px;
+  flex-direction:column;
+  font-family: 'TmoneyRoundWindExtraBold';
+}
 .mobile-side-bar > .logo{
 position:absolute;
 top:15px;
@@ -238,7 +257,6 @@ font-size:2rem;
 }
 .mobile-side-bar > .menu-box {
 font-family: 'Recipekorea';
-color:rgb(70, 70, 70);
 position:absolute;
 top:50%;
 left:50%;
@@ -261,8 +279,9 @@ position:fixed;
 bottom:0;
 width:100%;
 height:80px;
-background-color:#b7b5fd;
-border-top:3px solid black;
+background-color:#4d4b66;
+border-top:3px solid white;
+color:white;
 justify-content:space-around;
 z-index:3;
 }
@@ -588,3 +607,47 @@ font-size:1.8rem;
     cursor:pointer;
   }
   /* 게시물 수정 끝 */
+
+  
+/* 홈 메인 화면 시작 */
+.homeArticleList{
+  margin-top:40px;
+  margin-bottom:30px;
+  
+}
+.homeArticleList > a > .homeArticle{
+  margin:40px 0;
+  border:1px solid #DDDDDD;
+  padding:15px;
+}
+.homeArticleBoardName{
+  font-size:0.7rem;
+}
+.homeArticleInfo {
+  align-items:flex-end;
+  border-bottom:1px solid black;
+}
+.homeArticleInfo > .homeArticleTitle{
+  font-size:3rem;
+}
+.homeArticleInfo > .homeArticleWriter{
+  margin-left:auto;
+}
+.homeArticleInfo > .homeArticleRegDate {
+  margin-left:30px;
+  margin-right:15px;
+}
+.homeArticleBody {  
+  margin-top:10px;
+  padding:10px;
+  height:100px;
+  width:100%;
+  text-align:left;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:normal;
+  word-wrap:break-word;
+  
+}
+
+/* 홈 메인 화면 끝 */
