--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -8,15 +8,15 @@
     font-family: 'SDSamliphopangche_Outline';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
     font-weight: normal;
-    font-style: normal;
+    font-style: normal;   
 } 
-@font-face { 
+@font-face {  
     font-family: 'Recipekorea';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
-@font-face {
+@font-face {  
     font-family: 'Cafe24Ohsquare';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Cafe24Ohsquare.woff') format('woff');
     font-weight: normal;
@@ -91,6 +91,9 @@ align-items:center;
 }
 .flex-jc-c {
 justify-content:center;
+}
+.flex-jc-s-ar{
+  justify-content: space-around;
 }
 .flex-dir-col {
   flex-direction: column;
@@ -317,8 +320,14 @@ font-size:1.8rem;
    width:200px;
     height:32px;
 }
+.findMember{
+  margin-top:20px;  
+}
+.findMember > a{
+  padding:10px;
+}
 .loginSubmit{
-   margin-top:50px;
+   margin-top:20px;
         height: 45px;
         display: flex;
         align-items: center;
@@ -350,6 +359,21 @@ font-size:1.8rem;
       }
 /* 로그인 폼 화면 끝 */
 
+/* 로그인 아이디 찾기 결과 화면 시작 */
+.findLoginIdRs{
+  text-align: center;
+}
+.findLoginIdRs__login {
+  
+  margin-top:20px;
+  width:300px;
+  box-sizing: border-box;
+}
+.findLoginIdRs__login > a{
+  border:1px solid black;
+  padding:10px;
+}
+/* 로그인 아이디 찾기 결과 화면 끝 */
 
 /* 회원가입 폼 화면 시작 */
 .joinForm{
@@ -425,6 +449,9 @@ height:32px;
     text-align:center;
     margin-bottom:30px;
   }
+  .list-top{
+    height:30px;
+  }
   .searchForm{
     height:100%;
   }
@@ -467,7 +494,8 @@ height:32px;
   }
   .searchInput {
     display:inline-block;
-    height:28px;
+    height:100%;
+    box-sizing: border-box;
   }
   .selectmenu:hover{
     cursor: pointer;
@@ -476,13 +504,16 @@ height:32px;
     text-decoration: underline;
   }
   .write {
+    height:100%;
     margin-left:20px;
   }
   .write > input{
+    height:100%;
+    box-sizing: border-box;
     margin-left:auto;
     margin-right:10px;
     background-color:white;
-    padding:7px;
+    padding:3px;
     border:1px solid black;
     border-radius:2px;
     cursor: pointer;
