--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -8,15 +8,15 @@
     font-family: 'SDSamliphopangche_Outline';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
     font-weight: normal;
-    font-style: normal;   
+    font-style: normal; 
 } 
-@font-face {  
+@font-face { 
     font-family: 'Recipekorea';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
-@font-face {  
+@font-face {       
     font-family: 'Cafe24Ohsquare';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Cafe24Ohsquare.woff') format('woff');
     font-weight: normal;
@@ -100,6 +100,9 @@ justify-content:center;
 }
 .flex-jc-e {
   justify-content: flex-end;
+}
+.flex-grow-1 {
+  flex-grow:1;
 }
 /* 커스텀 */
 
@@ -576,6 +579,35 @@ height:32px;
          --cell-hit__width:40px;
          --cell-title__width:calc(100% - var(--cell-id__width) - var(--cell-writer__width) - var(--cell-regDate__width) - var(--cell-hit__width))
          }
+  }
+  .articleListPage {
+    margin-top:25px;
+  }
+  .articleListPage > a {
+    padding:0 20px;
+  }
+  .pages{
+    max-width:1100px;
+  }
+  .pages > a {
+    padding:0 15px;
+  }
+  .pageMoveForm{
+    display:none;
+  }
+  .articleListPage__prev{
+    width:150px;
+    text-align:left;
+  }
+  .articleListPage__prev > a {
+    padding:0 15px;
+  }
+  .articleListPage__next{
+    width:150px;
+    text-align:right;
+  }
+  .articleListPage__next > a {
+    padding:0 15px;
   }
   /* 게시물 리스트 끝 */
 
