--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -10,18 +10,18 @@
     font-weight: normal;
     font-style: normal; 
 } 
-@font-face { 
+@font-face {     
     font-family: 'Recipekorea';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
-@font-face {         
+@font-face {        
     font-family: 'Cafe24Ohsquare';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Cafe24Ohsquare.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-}
+} 
 @font-face {
     font-family: 'TmoneyRoundWindExtraBold';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff') format('woff');
@@ -129,7 +129,6 @@ transition:transform .3s;
 transform:scale(1.3);
 }
 .pc-top-bar  .menu-box {
-font-family: 'Recipekorea';
 z-index:3;
 }
 
@@ -161,7 +160,6 @@ padding:15px 10px;
 }
 
 .pc-top-bar  .usermenu{
-    font-family: 'Recipekorea';
     position:relative;
 }
 .pc-top-bar  .usermenu > a{
@@ -271,7 +269,6 @@ left:90%;
 font-size:2rem;
 }
 .mobile-side-bar > .menu-box {
-font-family: 'Recipekorea';
 position:absolute;
 top:50%;
 left:50%;
@@ -309,7 +306,6 @@ font-size:1.8rem;
 
 /* 로그인 폼 화면 시작 */
 .loginForm{
-    font-family: 'Recipekorea';
     margin-top:45px;
 }
 .loginTitle{
@@ -383,7 +379,6 @@ font-size:1.8rem;
 
 /* 회원가입 폼 화면 시작 */
 .joinForm{
-    font-family: 'Recipekorea';
     margin-top:45px;
     
 }
@@ -470,14 +465,14 @@ height:32px;
     height:100%;
     box-sizing: border-box;    
     border:1px solid black;
-    width:80px;
+    width:100px;
   }
   .searcharea:hover{
     cursor: pointer;
   }
   .searchcontent{
     padding-left:5px;
-    width:55px;
+    width:75px;
   }
   .arrow{
     color:#4d4b66;
@@ -490,7 +485,7 @@ height:32px;
     position:absolute;
     background-color:white;
     border:1px solid black;
-    width:80px;
+    width:100px;
     box-sizing: border-box;
     padding:5px;
     z-index:5;
@@ -611,6 +606,23 @@ height:32px;
   }
   .articleListPage__next > a {
     padding:0 15px;
+  }
+  .currentPage{
+    padding:0 15px;
+    font-weight:bold;
+    font-size:1.2rem;
+    position:relative;
+    box-sizing: border-box;
+  }
+  .currentPage::after{
+    content:"";
+    display:block;
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
+    width:20px;
+    height:2px;
+    background-color: black;
   }
   /* 게시물 리스트 끝 */
 
