--- a/WebContent/jsp/part/head.jspf
+++ b/WebContent/jsp/part/head.jspf
@@ -6,8 +6,7 @@
 <head>
 <meta charset="UTF-8">
 <title>${pageTitle }</title>
-<link href="${pageContext.request.contextPath}/css/app.css"
-	rel="stylesheet" type="text/css">
+
 <!-- 폰트어썸 불러오기 -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
@@ -15,12 +14,33 @@
 <!-- 제이쿼리 불러오기 -->
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	
+  <!-- 토스트 UI 시작 -->
+<!-- 하이라이트 라이브러리 추가, 토스트 UI 에디터에서 사용됨 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.1/highlight.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.4.1/styles/default.min.css">
+
+<!-- 토스트 UI 에디터, 자바스크립트 코어 -->
+<script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js" defer></script>
+
+<!-- 코드 미러 라이브러리 추가, 토스트 UI 에디터에서 사용됨 -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.3/codemirror.min.css" />
+<!-- 토스트 UI 에디터, CSS 코어 -->
+<link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+
+<!-- 토스트 UI 에디터, 신택스 하이라이트 플러그인 추가 -->
+<script src="https://uicdn.toast.com/editor-plugin-code-syntax-highlight/latest/toastui-editor-plugin-code-syntax-highlight.min.js" defer></script>
+<!-- 토스트 UI 끝 -->
+
+	<link href="${pageContext.request.contextPath}/css/app.css" rel="stylesheet" type="text/css">
+<script src="${pageContext.request.contextPath}/js/app.js"></script>
+	
 </head>
 <body>
 	<div class="pc-top-bar pc-ver">
 		<div class="height-100p flex">
 			<a class="flex flex-ai-c logo height-100p"
-				href="/jspCommunity/usr/home/main">LOGO</a>
+				href="/jspCommunity/usr/home/main">Indie World</a>
 			<div class="menu-box">
 				<ul class="flex height-100p">
 					<li><a class="flex flex-ai-c flex-jc-c height-100p" href="">게시판</a>
@@ -50,7 +70,7 @@
 	<div class="mobile-top-bar mobile-ver">
 		<a href="#" class="side-menu flex flex-ai-c"><i
 			class="fas fa-bars"></i></a> <a href="/jspCommunity/usr/home/main"
-			class="logo">LOGO</a>
+			class="logo">Indie World</a>
 	</div>
 
 
