--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -571,6 +571,20 @@ height:32px;
     width:100%;
     height:100%;
   }
+  .articleList_writer{
+  cursor:pointer;
+  }
+  .articleList__writerMenuBox{
+  display:none;
+  position:absolute;
+  border:2px solid black;
+  background-color:white;
+  top:0;
+  left:0;
+  width:100px;
+  height:50px;
+  padding:10px;
+  }
     .article{
       
       border-top:1px solid gray;
