회원 가입 시 가입축하메일 발송

--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -172,7 +172,7 @@ padding:15px 10px;
   font-size:0.8rem;
   padding:5px;
   margin:5px;
-  border:1px solid black; 
+  border:1px solid white; 
 }
 /* PC버전 탑 바 끝 */
 
