--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -52,11 +52,17 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'BBTreeGB';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_nine_@1.1/BBTreeGB.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 /* 폰트 불러오기 */
 
 /* 커스텀 */
 html{
-  font-family: 'S-CoreDream-5Medium';
+    font-family: 'LotteMartDream';
 }
 body , ul , li {
 list-style:none;
@@ -81,10 +87,17 @@ input{
   }
 .con{
 max-width:1200px;
-margin:0 auto;
+margin-left:auto;
+margin-right:auto;
+}
+.con-min-width{
+	min-width:320px;
 }
 .height-100p{
 height:100%;
+}
+.width-100p{
+	width:100%;
 }
 .flex{
 display:flex;
@@ -95,8 +108,11 @@ align-items:center;
 .flex-jc-c {
 justify-content:center;
 }
-.flex-jc-s-ar{
+.flex-jc-sa{
   justify-content: space-around;
+}
+.flex-jc-sb{
+	justify-content:space-between;
 }
 .flex-dir-col {
   flex-direction: column;
@@ -107,194 +123,131 @@ justify-content:center;
 .flex-grow-1 {
   flex-grow:1;
 }
+.float-l{
+	float:left;
+}
+.float-r{
+	float:right;
+}
+.block{
+	display:block;
+}
+main{
+	margin-top:30px;
+}
 /* 커스텀 */
 
+/* 바디컨텐트 시작 */
+.body-content{
+	  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+}
+/* 바디컨텐트 끝 */
+
 /* PC버전 탑 바 시작 */
-.pc-top-bar{
-height:100px;
-background-color:#4d4b66;
-position:relative;
-z-index:3;
-color:white;
+
+.top-menu-bar{
+	height:35px;
+	background-color:#2C2F3F;
+	color:white;
 }
-.pc-top-bar > div{
-  max-width:1400px;
-  margin:0 auto;
-  justify-content:space-between;
+.top-menu-bar__logo-img{
+	width:35px;
+	height:35px;
+	background-image: url("../image/top-bar/joystick.png");
+	background-size: contain;
+	background-repeat:no-repeat;
+	background-position-y:-8px;
+}
+.top-menu-bar__logo{
+	font-family: 'Recipekorea';
+	margin-left:10px;
+}
+.top-bar-pc{
+		position:relative;
+	height:200px;
+	background:linear-gradient(
+	to right,
+	#4d4b6600 10%,
+	#4d4b6650 25%,
+	#4d4b6660 50%,
+	#4d4b66 75%,
+	#4d4b66 100%
+	), url("../image/top-bar/top-bar.jpg");	
+	background-position-y:-20px;
+	background-size:contain;
+}
+.top-menu-bar__memberBox {
+	font-size:14px;
+}
+.top-menu-bar__memberBox > div:hover > a{
+	text-decoration:underline;
+}
+.top-menu-bar__memberBox > :nth-child(2),
+.top-menu-bar__memberBox > :nth-child(3){
+	margin-left:20px;
+}
+.top-bar-pc__container{
+	position:relative;
+	top:155px;
+	background-color:#03030363;	
 }
 
-.pc-top-bar .logo {
-font-size:2.5rem;
-font-family: 'SDSamliphopangche_Outline';
-transition:transform .3s;
+.top-bar-pc__menuBox__menu{	
+	height:45px;
+	color:white;
+	text-align:center;
 }
-.pc-top-bar .logo:hover{
-transform:scale(1.3);
+.top-bar-pc__menuBox__menu > li {
+	width:calc(100%/4);
 }
-.pc-top-bar  .menu-box {
-z-index:3;
+.top-bar-pc__menuBox__menu > li:hover{
+	background-color:#030303;
+	text-decoration:underline;
 }
-
-.pc-top-bar  .menu-box > ul > li {
-position:relative;
-transition:transform .3s;
-width:100px;
-margin:0 20px;
+.top-bar-pc__menuBox__menu > li > a{
+	line-height:45px;
+	text-align:center;
 }
-
-.pc-top-bar .menu-box > ul > li:hover > ul{
-  height:100%;
+.top-bar-pc__menuBox__menu-2 {
+	position:absolute;
+	top:100%;
+	left:0;
+	display:none;
+	color:black;
+	border:1px solid #DDDDDD;
 }
-.pc-top-bar .menu-box > ul > li > ul {
-  background-color:#4d4b66;
-position:absolute;
-top:100%;
-left:50%; 
-height:0;
-width:150px;
-color:white;
-transform:translatex(-50%);
-transition:height .5s;
-overflow:hidden;
+.top-bar-pc__menuBox__menu-2 > li {
+	padding:10px;
 }
-
-.pc-top-bar .menu-box > ul > li > ul > li {
-padding:15px 10px;
+.top-bar-pc__menuBox__menu-1 {
+	position:relative;
 }
-
-.pc-top-bar  .usermenu{
-    position:relative;
+.top-bar-pc__menuBox__menu-1:hover > .top-bar-pc__menuBox__menu-2{
+	display:block;
 }
-.pc-top-bar  .usermenu > a{
-    padding:0 15px;
-}
-.loginedMemberBox a {
-  font-size:0.8rem;
-  padding:5px;
-  margin:5px;
-  border:1px solid white; 
+.top-bar-pc__menuBox__menu-2 > li:hover{
+	background-color:#2C2F3F;
+	color:white;
 }
 /* PC버전 탑 바 끝 */
 
 /* 반응형 시작 */
-@media ( max-width:799px ) {
-.pc-ver {
-display:none !important;
-}
-body{
-  margin-bottom:100px;
-}
-}
-@media ( min-width:799px ) {
-.bottom-bar {
-display:none !important;
-}
-}
-@media ( min-width:800px ) {
-.mobile-ver {
-display:none !important;
-}
-}
-/* 반응형 시작 */
+/* 반응형 끝 */
 
 /* 반응형 모바일 탑 바 시작 */
-.mobile-top-bar{
-width:100%;
-height:100px;
-background-color:#4d4b66;
-color:white;
-position:relative;
-}
-.mobile-top-bar > .logo {
-position:absolute;
-top:50%;
-left:50%;
-transform:translatex(-50%) translatey(-50%);
-font-size:2.5rem;
-font-family: 'SDSamliphopangche_Outline';
-transition:transform .3s;
-}
-
-.mobile-top-bar > .side-menu {
-position:absolute;
-top:50%;
-transform:translatey(-50%);
-left:20px;
-font-size:2rem;
-}
 /* 반응형 모바일 탑 바 끝 */
 
 /* 반응형 모바일 사이드 바 시작 */
-.mobile-side-bar{
-position:fixed;
-top:0;
-left:-50%;
-height:100%;
-width:50%;
-background-color:#4d4b66;
-border-right:2px solid white;  
-box-sizing:border-box;
-transition:transform .5s;
-color:white;
-z-index:5;
-}
-.mobile-side-bar_top {
-  position:relative;
-}
-.mobile-side-bar > .mobile-side-bar_top > .logo{
-  position:absolute;
-  top:15px;
-  left:50%;
-  transform:translatex(-50%);
-   font-size:2.5rem;
-  font-family: 'SDSamliphopangche_Outline';  
-}
-.mobile-side-bar > .mobile-side-bar_top > .side-bar-close {
-  position:absolute;
-  top:10px;
-  right:15px;
-  font-size:2rem;
-  
-}
-.mobile-side-bar_top > .usermenu {
-  position:absolute;
-  top:10px;
-  left:15px;
-  flex-direction:column;
-  font-family: 'TmoneyRoundWindExtraBold';
-}
-.mobile-side-bar > .logo{
-position:absolute;
-top:15px;
-left:50%;
-transform:translatex(-50%);
-font-size:2.5rem;
-font-family: 'SDSamliphopangche_Outline';  
-}
-.mobile-side-bar > .side-bar-close {
-position:relative;
-top:15px;
-left:90%;
-font-size:2rem;
-}
-.mobile-side-bar > .menu-box {
-position:absolute;
-top:50%;
-left:50%;
-transform:translatex(-50%) translatey(-50%);
-}
-.mobile-side-bar > .menu-box > ul > li{
-padding:15px 0;
-}
-.mobile-side-bar > .menu-box > ul > li > ul {
-display:none;
-}
-.mobile-side-bar > .menu-box > ul > li:hover > ul {
-display:block;
-}
 /* 반응형 모바일 사이드 바 끝 */
 
 /* 반응형 하단바 시작 */
+@media (min-width:769px){
+	.bottom-bar{
+	display:none !important;
+	}
+}
 .bottom-bar {
 position:fixed;
 bottom:0;
@@ -803,44 +756,31 @@ height:32px;
 
   
 /* 홈 메인 화면 시작 */
-.homeArticleList{
-  margin-top:40px;
-  margin-bottom:30px;
-  
-}
-.homeArticleList > a > .homeArticle{
-  margin:40px 0;
-  border:1px solid #DDDDDD;
-  padding:15px;
-}
 
-.homeArticleInfo {
-  align-items:flex-end;
-  border-bottom:1px solid black;
+.article-list-box{
+	width:calc(100%/3);
+	padding:10px;
 }
-.homeArticleInfo > .homeArticleTitle{
-  font-size:3rem;
+.article-list-box-1__board {
+	padding:5px;
+	border-bottom:2px solid #DDDDDD;
 }
-.homeArticleInfo > .homeArticleWriter{
-  margin-left:auto;
+.article-list-box-1__article{
+	padding:5px;
+	border-bottom:1px solid #DDDDDD;
 }
-.homeArticleInfo > .homeArticleRegDate {
-  margin-left:30px;
-  margin-right:15px;
+.article-list-box-1__articles span {
+	display:inline-block;
 }
-.homeArticleBody {  
-  margin-top:10px;
-  padding:10px;
-  height:100px;
-  width:100%;
-  text-align:left;
-  overflow:hidden;
-  text-overflow:ellipsis;
-  white-space:normal;
-  word-wrap:break-word;
-  
+.article-list-box-1__articles span:nth-child(1){
+	width:70%;
 }
-
+.article-list-box-1__articles span:nth-child(2){
+	width:28%;
+}
+.article-list-box__articles-writer {
+	text-align:center;
+}
 /* 홈 메인 화면 끝 */
 
 /* 멤버정보 화면 시작 */
