--- a/WebContent/jsp/part/head.jspf
+++ b/WebContent/jsp/part/head.jspf
@@ -50,7 +50,7 @@
 <div class=" top-menu-bar__logobox">
 <a class="flex flex-ai-c" href="/jspCommunity/usr/home/main">
 <div class="top-menu-bar__logo-img"></div>
-<span class="top-menu-bar__logo">Indie World</span>
+<div class="top-menu-bar__logo">Indie World</div>
 </a>
 </div>
 <div class="flex-grow-1"></div>
