--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -71,6 +71,7 @@ margin:0;
 }
 body{
 	min-height:100vh;
+	
 }
 a{
 text-decoration:none;
@@ -133,9 +134,12 @@ justify-content:center;
 	display:block;
 }
 main{
-	margin-top:30px;
-	margin-bottom:30px;
+	padding-top:30px;
+	padding-bottom:30px;
+	flex-grow:1;
+	
 }
+
 /* 커스텀 */
 
 /* 바디컨텐트 시작 */
@@ -199,6 +203,7 @@ main{
 	rgba(255,255,255,0.75) 85%,
 	rgba(255,255,255,1) 100%
 	), url("../image/top-bar/top-bar.jpg");	
+	
 	background-size:contain;
 	z-index:3;	
 }
@@ -206,6 +211,19 @@ main{
 	.top-bar-pc{
 	background-size: cover;
 	background-repeat:no-repeat;
+	}
+}
+@media (max-width:768px){
+	.top-menu-bar__memberBox__name{
+	width:35px !important;
+	}
+	.top-menu-bar__memberBox__modify{
+	width:76px !important;
+	margin-left:5px !important;
+	}
+	.top-menu-bar__memberBox__logout{
+	width:55px !important;
+	margin-left:5px !important;
 	}
 }
 .top-menu-bar__logobox{
@@ -282,7 +300,7 @@ main{
 /* 반응형 하단바 시작 */
 @media (max-width:768px){
 	main {
-	margin-bottom:100px;
+	margin-bottom:80px;
 	}
 }
 @media (min-width:769px){
@@ -329,6 +347,9 @@ font-size:1.8rem;
 }
 .findMember > a{
   padding:10px;
+}
+.findMember > a:hover{
+	text-decoration:underline;
 }
 .submitButtonBox{
    margin-top:20px;
@@ -705,6 +726,11 @@ height:32px;
   border-bottom:1px solid #DDDDDD;
   padding:5px;
   }
+  .article-mb-1{
+  white-space:nowrap;
+	overflow:hidden;
+	text-overflow:ellipsis;
+  }
   :root{
          --cell-id-mb__width:30px;
          --cell-writer-mb__width:50px;
@@ -793,6 +819,11 @@ height:32px;
   }
   .articleDetailTitle{
     font-size:3rem;
+  }
+  @media (max-width:768px){
+  .articleDetailTitle{
+  font-size:1.2rem !important;
+  }
   }
   .articleDetailInfo{
     position:relative;
@@ -915,8 +946,11 @@ height:32px;
 	border-bottom:2px solid #DDDDDD;
 }
 .article-list-box-1__article{
-	padding:5px 0;
+	padding:5px 3px;
 	border-bottom:1px solid #DDDDDD;
+}
+.article-list-box-1__articles > a:hover{
+	background-color:#afafaf49;
 }
 .article-list-box-1__articles span {
 	display:inline-block;
@@ -941,6 +975,8 @@ height:32px;
 .memberInfoBox{
 	margin-top:60px;
 	margin-bottom:60px;
+	margin-left:10px;
+	margin-right:10px;
 }
 .memberInfoBox > div {
 	margin-top:30px;
@@ -965,4 +1001,62 @@ height:32px;
   width:100%;
   height:30px;
 }
+@media (max-width:768px) {
+	.form_group_type {
+	width:70px !important;
+	}
+	.form_group_value {
+	width:200px !important;
+	}
+	
+}
 /* 멤버정보 화면 끝 */
+
+/* 하단 카피라이트 바 시작 */
+footer{
+	height:120px;
+	border-top:1px solid #DDDDDD;
+	background-color:#2C2F3F80;
+	color:white;
+}
+.bottom-cr-bar{
+	position:relative;
+	
+}
+@media (max-width:768px){
+	footer{
+	display:none !important;
+	}
+}
+.bottom-cr-bar__logobox{
+	position:absolute;
+	top:15px;
+	left:50px;
+}
+.bottom-cr-bar__logo-img{
+	width:35px;
+	height:35px;
+	background-image: url("../image/top-bar/joystick.png");
+	background-size: contain;
+	background-repeat:no-repeat;
+	background-position-y:-8px;
+}
+.bottom-cr-bar__logo{
+	font-size:1.5rem;
+	margin-left:5px;
+}
+.bottom-cr-bar__crtextbox{
+	position:absolute;
+	top:85px;
+	left:50px;
+}
+.bottom-cr-bar__infobox{
+	position:absolute;
+	top:65px;
+	right:50px;
+}
+.bottom-cr-bar__infobox__text > div:nth-child(2){
+	margin-top:5px;
+}
+
+/* 하단 카피라이트 바 끝 */
