--- a/WebContent/jsp/part/foot.jspf
+++ b/WebContent/jsp/part/foot.jspf
@@ -1,3 +1,29 @@
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+	pageEncoding="UTF-8"%>
+
 </div>
+
+<footer class="con-min-width">
+<div class="con bottom-cr-bar">
+<div class=" bottom-cr-bar__logobox">
+<a class="flex flex-ai-c" href="/jspCommunity/usr/home/main">
+<div class="bottom-cr-bar__logo-img"></div>
+<div class="bottom-cr-bar__logo">Indie World</div>
+</a>
+</div>
+<div class="bottom-cr-bar__crtextbox">
+<div class="bottom-cr-bar__crtextbox__text">copyright <i class="fas fa-copyright"></i>. Indie World All rights reserved.</div>
+</div>
+
+<div class="bottom-cr-bar__infobox">
+<div class="bottom-cr-bar__infobox__text">
+<div class="bottom-cr-bar__infobox__address">대전광역시 서구 관저동</div>
+<div class="bottom-cr-bar__infobox__text__email">cdbitmana@gmail.com</div>
+</div>
+</div>
+
+</div>
+</footer>
+
 </body>
 </html>
