--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -185,12 +185,24 @@ main{
 	background-repeat:no-repeat;
 	background-position-y:-8px;
 }
+.logo-text{
+	color: #c6e2ff;
+		text-shadow:
+    0 0 2px rgba(202,228,225,0.92),
+    0 0 10px rgba(202,228,225,0.34),
+    0 0 4px rgba(30,132,242,0.52),
+    0 0 7px rgba(30,132,242,0.92),
+    0 0 11px rgba(30,132,242,0.78),
+    0 0 16px rgba(30,132,242,0.92);
+}
+
 
 .top-menu-bar__logo{
 	font-family: 'Recipekorea';
 	margin-left:10px;
 	height:35px;
 	line-height:35px;
+	
 }
 .top-bar-pc{
 		position:relative;
