--- a/WebContent/jsp/part/foot.jspf
+++ b/WebContent/jsp/part/foot.jspf
@@ -8,7 +8,7 @@
 <div class=" bottom-cr-bar__logobox">
 <a class="flex flex-ai-c" href="/jspCommunity/usr/home/main">
 <div class="bottom-cr-bar__logo-img"></div>
-<div class="bottom-cr-bar__logo">Indie World</div>
+<div class="bottom-cr-bar__logo logo-text">Indie World</div>
 </a>
 </div>
 <div class="bottom-cr-bar__crtextbox">
