--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -86,6 +86,9 @@ li {
   padding: 0;
   margin: 0;
 }
+button{
+	font-family: "LotteMartDream";
+}
 body {
   min-height: 100vh;
 }
@@ -125,6 +128,9 @@ input {
 .flex-jc-c {
   justify-content: center;
 }
+.flex-jc-e{
+	justify-content:flex-end;
+}
 .flex-jc-sa {
   justify-content: space-around;
 }
@@ -154,7 +160,23 @@ main {
   padding-bottom: 30px;
   flex-grow: 1;
 }
+.btn-square{
+	border: 1px solid #dddddd;
+  color: #000;
+  background-color: #fff;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  overflow: hidden;
+}
+.btn-square:hover{
 
+  background-color: #b7b5fd;
+  box-shadow: 0px 15px 20px #cbc9fc;
+  color: #fff;
+
+}
 /* 커스텀 */
 
 /* 바디컨텐트 시작 */
@@ -288,6 +310,8 @@ main {
   border: 1px solid #dddddd;
   background-color: white;
   z-index: 5;
+  transition:all .5s;
+  overflow:hidden;
 }
 
 .top-bar-pc__menuBox__menu-2 > li > a {
@@ -299,6 +323,16 @@ main {
 }
 .top-bar-pc__menuBox__menu-1:hover > .top-bar-pc__menuBox__menu-2 {
   display: block;
+  animation:top-bar-menu__drop-down .5s;
+}
+@keyframes top-bar-menu__drop-down {
+  0% {
+   	height :0;
+  }
+
+  100% {
+    height: 72px;
+  }
 }
 .top-bar-pc__menuBox__menu-2 > li:hover {
   background-color: #2c2f3f;
@@ -938,26 +972,23 @@ main {
 .writeReplyBodyInput {
   position: relative;
 }
-.submitWriteReply {
-  position: relative;
-  left: 100%;
-  transform: translateX(-100%);
+.articleDetailBox__reply-modifyform__btns{
   margin-top: 15px;
-  padding:5px;
-  border: 1px solid #dddddd;
-  color: #000;
-  background-color: #fff;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
-  overflow: hidden;
 }
 
-.submitWriteReply:hover {
-  background-color: #b7b5fd;
-  box-shadow: 0px 15px 20px #cbc9fc;
-  color: #fff;
+.submitReplyModify , .submitReplyModifyCancel {
+  font-size:14px;
+  padding:7px;
+  margin-left:4px;
+}
+
+.submitWriteReply{
+	position:relative;
+	left:100%;
+	transform:translateX(-100%);
+	margin-top:5px;
+	padding:7px;
+	font-size:14px;
 }
 
 .articleDetailBox__articleReplyList {
@@ -983,6 +1014,9 @@ main {
 }
 .reply__writer{
 	width:var(--reply__writer__width);
+	 white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .reply__regDate{
 	text-align:center;
